added booking component

--- a/src/app/components/global/mininav/mininav.component.scss
+++ b/src/app/components/global/mininav/mininav.component.scss
@@ -1,7 +1,7 @@
 .ContainerBook{
     display: flex;
     flex-direction: row;
-    background-color:#004fff;
+    background-color :#0069d9;
     width: 100%;
     display: none;
 }
@@ -58,4 +58,5 @@
         width: 100%;
         display: flex;
     }
+
 }
