--- a/src/app/components/global/nav/nav.component.scss
+++ b/src/app/components/global/nav/nav.component.scss
@@ -58,5 +58,8 @@
      .Desktop a{
       margin: 5%;
       text-wrap: nowrap;
+      text-decoration: none;
+      color:#000000;
+      font-family: poppins , sans-serif;
      }
   }
