application booking for

--- a/src/app/components/global/home/bookings/bookings.component.html
+++ b/src/app/components/global/home/bookings/bookings.component.html
@@ -1,5 +1,15 @@
 <div class="ContainerBookings">
-    <div class="Bookings">
-        <h1> b</h1>
-</div>
+  <div class="Bookings">
+    <h1>Book your appointment</h1>
+    <p>Email</p>
+    <input type="email" alt="" id="box" placeholder="Email">
+    <p>Date</p>
+    <input type="date" alt="" id="box" placeholder="Date">
+    <p>Time</p>
+    <input type="time" alt="" id="box" placeholder="Time">
+    <button>Submit</button>
+  </div>
+  <div class="ContainerImage">
+    <img src="/assets/booking.png" alt="" id="BookingIMG">
+  </div>
 </div>
