--- a/src/app/components/global/home/aboutus/aboutus.component.html
+++ b/src/app/components/global/home/aboutus/aboutus.component.html
@@ -1,5 +1,32 @@
-<div class="ContainerAboutus">
-    <div class="Aboutus">
-        <h1>why choose us</h1>
-    </div>
+
+<div class="ContainerAbout">
+  <div class="Aboutus">
+    <h1>why people choose us?</h1>
+    <p></p>
+
+  </div>
 </div>
+<!-- boxes begin -->
+
+<div class="boxes-container">
+  <div class="box box-1">
+    <i class="fas fa-heartbeat"></i>
+    <h2>Expert Care</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet nulla auctor, vestibulum magna sed, convallis ex.</p>
+
+  </div>
+  <div class="box box-2">
+    <i class="fas fa-clock"></i>
+    <h2>Convenient Scheduling</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet nulla auctor, vestibulum magna sed, convallis ex.</p>
+
+  </div>
+  <div class="box box-3">
+    <i class="fas fa-users"></i>
+    <h2>Personalized Attention</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet nulla auctor, vestibulum magna sed, convallis ex.</p>
+
+  </div>
+</div>
+
+
