--- a/src/app/components/global/home/aboutus/aboutus.component.scss
+++ b/src/app/components/global/home/aboutus/aboutus.component.scss
@@ -42,11 +42,11 @@
 .box {
   width: 70%;
   padding: 20px;
-  box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 0.0625em 0.0625em, rgba(0, 0, 0, 0.25) 0px 0.125em 0.5em, rgba(255, 255, 255, 0.1) 0px 0px 0px 1px inset;
   border-radius: 10px;
   margin: 0 10px;
   color: #8a8989; // white text
-  border: 0.10px solid white;
+  border: 1px solid white;
 
 }
 .box h2{
@@ -63,29 +63,18 @@
 
 .box-2 {
   margin-top: 5%;
+  background-color: #045fc0;
+
+}
+.box-2 h2 {
+  color: #e2e2e2;
 }
 .box-3 {
   margin-top: 5%;
 }
 
 @media screen and (min-width: 1024px){
-  .ContainerAbout{
-   margin-top: 3%;
-   height: 0vh;
-  
-  }
-  .Aboutus h1 {
-    font-size: 25px;
-    margin-top: 2%;
-  }
-  .Aboutus h2{
-    font-size: 20px;
-  }
-  .Aboutus h2 span{
-    font-size: 24px;
-    font-weight: bolder;
-    color:#e4cc60; //the color is a global color I'll add on the global styles//
-  }
+
   .boxes-container {
     display: flex;
     justify-content: center;
@@ -93,6 +82,7 @@
     display: flex;
     flex-direction: row;
     margin: 0%;
+    margin-top: 2%;
   }
   
   .box {
@@ -119,7 +109,7 @@
     margin-top: -5%;
   }
   .boxes-container {
-    height: 60vh;
+    height: 50vh;
   }
 
 }  
