--- a/src/app/components/global/home/why-choose-us/why-choose-us.component.scss
+++ b/src/app/components/global/home/why-choose-us/why-choose-us.component.scss
@@ -2,24 +2,30 @@
     width:100%;
 }
 .heading{
+    width: 100%;
    display: flex;
   text-align: center;
    flex-direction: column;
+   
 }
 .heading h1{
     font-family: poppins,sans-serif;
     color: #0069d9;
+    text-align: center;
 }
 .heading p{
     margin-top: -1%;
     color: gray;
+  display: none;
 }
 .ContainerWhychooseus{
     display: flex;
-    flex-direction: row;
-    width: 90%;
+    flex-direction:column;
+    width: 100%;
     justify-content: center;
-    margin-left: 8%;
+    align-items: center;
+    text-align: center;
+
 }
 .fas{
     color: #0069d9;
@@ -28,15 +34,38 @@
 #chooseusimg{
     width: 80%;
     padding-left: 6%;
+    display: none;
 }
-
-
 .Whychooseus{
     display: flex;
     flex-direction: column;
-    width:25%;
+    width:80%;
     margin-top: 5%;
+    text-align: center;
 }
 .Whychooseus p{
     color: gray;
+}
+@media screen and (min-width: 1024px){
+    .ContainerWhychooseus{
+        display: flex;
+        flex-direction:row;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    
+    }
+    #chooseusimg{
+        width: 100%;
+        padding-left: 6%;
+        display: flex;
+    }
+    .Whychooseus{
+        display: flex;
+        flex-direction: column;
+        width:20%;
+        margin-top: 0%;
+        text-align: center;
+    }
 }
