--- a/src/app/components/global/home/aboutus/aboutus.component.scss
+++ b/src/app/components/global/home/aboutus/aboutus.component.scss
@@ -30,12 +30,14 @@
 
 //boxes begin//
 .boxes-container {
+  width: 100%;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   padding-top: 4%;
+  margin-top: 5%;
   flex-direction: column;
-  margin: 5%;
   background-color: #0069d9;;
 }
 
